--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+.canvas-container {
+    display: flex;
+    flex-wrap: wrap;
+}
 .container {
     display: flex;
     /* justify-content: center; */
@@ -6,6 +10,25 @@
 .cols {
     display: flex;
     flex-direction: column;
+}
+
+.color-key {
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    align-self: center;
+    margin-left: 1rem;
+}
+
+.color-key div {
+    display: flex;
+    align-items: center;
+    margin: .35rem;
+}
+
+.color-key div label {
+    margin-right: 1rem;
+    min-width: 3rem;
 }
 
 .tooltip {
@@ -35,6 +58,15 @@
     /* animation-delay: .5s; */
 }
 
+fieldset {
+    height: fit-content;
+    /* margin-left: auto; */
+}
+
+fieldset button {
+    border-radius: 1rem;
+}
+
 @keyframes fade-in {
     from {
         visibility: visible;
@@ -48,13 +80,4 @@
         border-color: hsl(60deg 74% 50%);
         color: black;
     }
-}
-
-fieldset {
-    height: fit-content;
-    /* margin-left: auto; */
-}
-
-fieldset button {
-    border-radius: 1rem;
 }
